[package]
name = "newt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["serde/std", "serde_json/std"]
