[package]
name = "newt"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "newt"
path = "src/main.rs"

[lib]
name = "newt_lib"
path = "src/lib.rs"

[dependencies]
newt-core = { path = "../newt-core", features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "macros", "io-util", "time", "signal", "sync"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
boringtun = { version = "0.7", default-features = false }
smoltcp = { version = "0.13", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[features]
default = []
provisioning = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
newt-core = { path = "../newt-core", features = ["std"] }
serde_json = "1"
